testsuite/tests/grammar/invalid_predicate/more_general.lkt
from lexer_example import foo_lexer


@with_lexer(foo_lexer)
grammar foo_grammar {
    @main_rule main_rule <- Example("example") |> when(BaseExample.pred)
}

class FooNode implements Node[FooNode] {
}

@abstract class BaseExample: FooNode {
    fun pred(): Bool = true
}

class Example: BaseExample implements TokenNode {
}
